--- a/_output.yml
+++ b/_output.yml
@@ -5,5 +5,4 @@ bookdown::gitbook:
       before: |
         <li>>Vibe Guide</li>
       after: |
-        <li>Copyright © Compulite Systems (2000) Ltd.</li>
-        <li><a href="https://compulite.com/" target="blank">compulite.com</a></li>
+        <li style="text-align: center;"> <br> Copyright © Compulite Systems (2000) Ltd.<br> <a href="https://compulite.com/" target="_blank">compulite.com</a> </li>
