--- a/_output.yml
+++ b/_output.yml
@@ -3,6 +3,7 @@ bookdown::gitbook:
   config:
     toc:
       before: |
+        <li style="text-align: center;">
         <li>Vibe Guide</li>
       after: |
         <li style="text-align: center;"> <br> Copyright © Compulite Systems (2000) Ltd.
