--- a/_output.yml
+++ b/_output.yml
@@ -4,6 +4,7 @@ bookdown::gitbook:
     toc:
       before: |
         <li style="text-align: center;">
+        <img src="https://compulite.com/images/Products/Lighting%20Controllers/vibe/vibe%20logo.webp" alt="Image" style="max-width:200px;padding:10px;"><br>
         <li>Vibe Guide</li>
       after: |
         <li style="text-align: center;"> <br> Copyright © Compulite Systems (2000) Ltd.
