--- a/_output.yml
+++ b/_output.yml
@@ -7,7 +7,7 @@ bookdown::gitbook:
         <img src="https://compulite.com/images/Products/Lighting%20Controllers/vibe/vibe%20logo.webp" alt="Image" style="max-width:200px;padding:10px;"><br>
         <br>
         <br>
-        <li style="text-align: center;">Vibe Guide</li>
+        <li style="text-align: center;"><h2>Vibe Guide</h2></li>
       after: |
         <li style="text-align: center;"> <br> Copyright © Compulite Systems (2000) Ltd.
         <br> <a href="https://compulite.com/" target="_blank">compulite.com</a> </li>
