--- a/_output.yml
+++ b/_output.yml
@@ -12,3 +12,8 @@ bookdown::gitbook:
       after: |
         <li style="text-align: center;"> <br> Copyright © Compulite Systems (2000) Ltd.
         <br> <a href="https://compulite.com/" target="_blank">compulite.com</a> </li>
+
+bookdown::epub_book:
+  fig_caption: FALSE
+  toc_depth: 2
+  
