--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,8 +1,10 @@
 book_filename: "bookdownproj"
 output_dir: docs
 delete_merged_file: true
-edit: https://github.com/compulite2021/Vibe-Guide/edit/master/%s
-view: https://github.com/compulite2021/Vibe-Guide/blob/master/%s
+edit: null
+view: null
 language:
   ui:
     chapter_name: "Chapter "
+    
+    
