--- a/_output.yml
+++ b/_output.yml
@@ -25,3 +25,8 @@ bookdown::epub_book:
   toc_depth: 3
   cover_image: Vibe-Guide-Cover.png
   epub_version: "epub3"
+  
+bookdown::pdf_book:
+  fig_caption: FALSE
+  toc: TRUE
+  toc_depth: 3
